--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <section>
+      <h2 class="hello_section">Hello World</h2>
+      <p id="quote">
+        Everybody should learn how to program a computer because it teaches you
+        how to think. - ꜱᴛᴇᴠᴇ ᴊᴏʙꜱ
+      </p>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
