--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -17,9 +17,27 @@
     <br />
     <br />
     <br />
+
+    <!-- <h3 class="heading">This is heading</h3> -->
+
+    <!-- <ul>
+      <li><a href="#">Click me</a></li>
+      <li>List 2</li>
+    </ul>
+
+    <div class="button-div">
+      <a href="#">Button</a>
+    </div> -->
+
+    <!-- <a href="#" class="button" onclick="clickMessage1()">Button One</a>
+    <a href="#" class="button_two" onclick="clickMessage2()">Button Two</a>
     <br />
     <br />
-    <br />
+    <br /> -->
+    <!-- <p id="paragraph"></p> -->
+
+    <!-- <img src="" alt="" id="imageshow" width="295" /> -->
+
     <script src="script.js"></script>
   </body>
 </html>
