--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -38,6 +38,8 @@
 
     <!-- <img src="" alt="" id="imageshow" width="295" /> -->
 
+    <!-- <a href="#">Button</a> -->
+
     <script src="script.js"></script>
   </body>
 </html>
