--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -40,6 +40,24 @@
 
     <!-- <a href="#">Button</a> -->
 
+    <!-- <div>
+      <ul>
+        <li>List 1</li>
+        <li>List 2</li>
+        <li>List 3</li>
+      </ul>
+    </div> -->
+
+    <!-- <br />
+    <br />
+    <br />
+
+    <div id="box-container">
+      <li>List 1</li>
+      <li id="chaild-remove">List 2</li>
+      <li>List 3</li>
+    </div> -->
+
     <script src="script.js"></script>
   </body>
 </html>
