--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -48,7 +48,7 @@
       </ul>
     </div> -->
 
-    <!-- <br />
+    <br />
     <br />
     <br />
 
@@ -56,7 +56,7 @@
       <li>List 1</li>
       <li id="chaild-remove">List 2</li>
       <li>List 3</li>
-    </div> -->
+    </div>
 
     <script src="script.js"></script>
   </body>
