--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -54,7 +54,7 @@
 
     <div id="box-container">
       <li>List 1</li>
-      <li id="chaild-remove">List 2</li>
+      <li>List 2</li>
       <li>List 3</li>
     </div>
 
