--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -48,7 +48,7 @@
       </ul>
     </div> -->
 
-    <br />
+    <!-- <br />
     <br />
     <br />
 
@@ -56,8 +56,22 @@
       <li>List 1</li>
       <li>List 2</li>
       <li>List 3</li>
-    </div>
+    </div> -->
 
+    <!-- <div class="box-container">
+      <img
+        src="https://images.unsplash.com/photo-1547084266-7501a964bf9b?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt=""
+        width="375px"
+      />
+      <br />
+      <br />
+      <div class="child_box">
+        <a href="#" class="button" onclick="next()">Next</a>
+        <br />
+        <a href="#" class="button_two" onclick="previous()">Previous</a>
+      </div>
+    </div> -->
     <script src="script.js"></script>
   </body>
 </html>
