--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -72,6 +72,20 @@
         <a href="#" class="button_two" onclick="previous()">Previous</a>
       </div>
     </div> -->
+    <!-- <br />
+    <br />
+    <br /> -->
+
+    <!-- <div class="styleColor">
+      <li>List 1</li>
+      <li>List 2</li>
+      <li>List 3</li>
+    </div>
+    <br /> -->
+
+    <!-- <a href="#" class="button" onclick="addStyle()">Add Style</a>
+    <a href="#" class="button_two" onclick="removeStyle()">Remove Style</a> -->
+
     <script src="script.js"></script>
   </body>
 </html>
