--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -86,6 +86,9 @@
     <!-- <a href="#" class="button" onclick="addStyle()">Add Style</a>
     <a href="#" class="button_two" onclick="removeStyle()">Remove Style</a> -->
 
+    <!-- <button>Click me</button> -->
+    <p>I love Bangladesh</p>
+
     <script src="script.js"></script>
   </body>
 </html>
