--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -87,7 +87,8 @@
     <a href="#" class="button_two" onclick="removeStyle()">Remove Style</a> -->
 
     <!-- <button>Click me</button> -->
-    <p>I love Bangladesh</p>
+    <!-- <p>I love Bangladesh</p>
+    <button>Change Design</button> -->
 
     <script src="script.js"></script>
   </body>
