--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -90,6 +90,11 @@
     <!-- <p>I love Bangladesh</p>
     <button>Change Design</button> -->
 
+    <!-- <h3>This button has not clicked yet</h3>
+    <button class="my_button">Button 1</button>
+    <button class="my_button">Button 2</button>
+    <button class="my_button">Button 3</button> -->
+
     <script src="script.js"></script>
   </body>
 </html>
