--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -95,6 +95,14 @@
     <button class="my_button">Button 2</button>
     <button class="my_button">Button 3</button> -->
 
+    <!-- <button>Click Here</button> -->
+
+    <!-- <button class="A" onclick="styleAdd()">A</button>
+    <button class="B">B</button>
+    <button class="C">C</button> -->
+
+    <p>You haven't clicked yet</p>
+
     <script src="script.js"></script>
   </body>
 </html>
