--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -101,7 +101,12 @@
     <button class="B">B</button>
     <button class="C">C</button> -->
 
-    <p>You haven't clicked yet</p>
+    <!-- <p>You haven't clicked yet</p> -->
+
+    <!-- <p>This is a paragraph!</p>
+    <br />
+    <button onclick="addstyle()">Add style</button>
+    <button onclick="removestyle()">Remove Style</button> -->
 
     <script src="script.js"></script>
   </body>
