--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -108,6 +108,9 @@
     <button onclick="addstyle()">Add style</button>
     <button onclick="removestyle()">Remove Style</button> -->
 
+    <!-- <button>Click me</button> -->
+    <!-- <h1>Hello Bangladesh</h1> -->
+
     <script src="script.js"></script>
   </body>
 </html>
