--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -111,6 +111,11 @@
     <!-- <button>Click me</button> -->
     <!-- <h1>Hello Bangladesh</h1> -->
 
+    <h1>This button has not clicked yet</h1>
+    <button>Button 1</button>
+    <button>Button 2</button>
+    <button>Button 3</button>
+
     <script src="script.js"></script>
   </body>
 </html>
