--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -116,6 +116,39 @@
     <button>Button 2</button>
     <button>Button 3</button> -->
 
+    <!-- <!DOCTYPE html>
+    <html>
+      <head>
+        <title>Student Info Table</title>
+      </head>
+      <body>
+        <table border="1" align="center">
+          <tr>
+            <th>Roll</th>
+            <th>2001</th>
+            <th>2002</th>
+            <th>2003</th>
+          </tr>
+          <tr>
+            <td>Name</td>
+            <td>Arafat</td>
+            <td>Shafin</td>
+            <td>Mahin</td>
+          </tr>
+          <tr>
+            <td>GPA</td>
+            <td>5.00</td>
+            <td>2.05</td>
+            <td>1.05</td>
+          </tr>
+          <tr>
+            <td>Gender</td>
+            <td colspan="3">Male</td>
+          </tr>
+        </table>
+      </body>
+    </html> -->
+
     <script src="script.js"></script>
   </body>
 </html>
