--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -149,6 +149,15 @@
       </body>
     </html> -->
 
+    <!-- <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero dolorum
+      deleniti repellat unde quo harum eveniet minus ab iusto quaerat ipsam
+      quasi, suscipit numquam quidem nulla illum reprehenderit voluptates,
+      assumenda maiores quae cum a molestiae veniam. Eligendi ullam, animi
+      reprehenderit vero quas laudantium magni sapiente est maiores blanditiis
+      perferendis vel! This was made by me
+    </p> -->
+
     <script src="script.js"></script>
   </body>
 </html>
