--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -159,6 +159,43 @@
     </p> -->
     <br />
     <br />
+
+    <!-- <p id="text">I am from Bangladesh.</p> -->
+
+    <div class="box">
+      <a href="#" onclick="message()">Button 1</a>
+      <br />
+      <a href="#" onclick="message2()">Button 2</a>
+      <br />
+      <a href="#" onclick="message3()" class="my_image">Image Button</a>
+      <br />
+      <a href="#" onclick="message4()">Remove Image</a>
+      <p id="paragraph">I haven't clicked yet</p>
+      <!-- <img
+        src="https://images.unsplash.com/photo-1724093121148-ec407f45e44c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt=""
+        width="375px"
+        id="showImage"
+        style="display: none"
+      />
+
+      <img
+        src="https://images.unsplash.com/photo-1724093121472-604265c69ca9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt=""
+        width="375px"
+        id="showImage2"
+        style="display: none"
+      /> -->
+
+      <img src="#" alt="" id="my_image" />
+
+      <ul>
+        <li>List 1</li>
+        <li>List 2</li>
+        <li>List 3</li>
+      </ul>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
