--- a/Lesson-8/index.html
+++ b/Lesson-8/index.html
@@ -206,6 +206,11 @@
       </ul>
     </div> -->
 
+    <p id="paragraph">This is paragraph!</p>
+    <br />
+    <button onclick="addStyle()">Add style</button>
+    <button onclick="removeStyle()">Remove style</button>
+
     <script src="script.js"></script>
   </body>
 </html>
